chore: minor doc fixes

--- a/docs/v1.24.md
+++ b/docs/v1.24.md
@@ -5,9 +5,9 @@
 ## What's new - Major themes
 - Cilium is now the default CNI, calico gets removed
 - cluster-autoscaler is enabled by default on AWS
-- worker nodes are now automatically update to latest AMI and config in a rolling fashion
+- worker nodes are now fully automatically updated to latest AMI and config in a rolling fashion
 - integrated Bitnami Sealed Secrets controller
-- reduced avg. CPU load on controller nodes well below the 20% threshold to prevent extra costs from CPU credits
+- reduced avg. CPU load on controller nodes, well below the 20% threshold to prevent extra costs from CPU credits in most cases
 
 ## Version upgrades
 - cilium
@@ -39,7 +39,7 @@ Ensure your Kube context points to the correct cluster !
 
 4. Review the kubezero-config and if all looks good commit the ArgoApp resouce for Kubezero via regular git  
   git add / commit / push `<cluster/env/kubezero/application.yaml>`
-  * DO NOT yet re-enable ArgoCD before all pre v1.24 workers have been replaced !!! *
+  *DO NOT yet re-enable ArgoCD before all pre v1.24 workers have been replaced !!!*
 
 5. Reboot controller(s) one by one  
 Wait each time for controller to join and all pods running.
