Some version bumps

--- a/docs/v1.25.md
+++ b/docs/v1.25.md
@@ -6,6 +6,7 @@
 - AppArmor is now available and enabled on all controller and worker nodes
 - all KubeZero AMIs and containers updated to latest Alpine 3.17
 - improved worker initialization, ensure cilium is running before any other pod
+- metrics and Grafana dashboards added for Cilium agents and operator
 
 ## Version upgrades
 - cilium 1.13
