--- a/docs/v1.25.md
+++ b/docs/v1.25.md
@@ -6,7 +6,8 @@
 - AppArmor is now available and enabled on all controller and worker nodes
 - all KubeZero AMIs and containers updated to latest Alpine 3.17
 - improved worker initialization, ensure cilium is running before any other pod
-- metrics and Grafana dashboards added for Cilium agents and operator
+- metrics and Grafana dashboards added for Cilium agents, operator and cri-o
+- metrics for any EC2 instances added, eg. node_exporter metrics from bastion and NAT instances, incl. support for cross region scraping
 
 ## Version upgrades
 - cilium 1.13
@@ -40,7 +41,6 @@ Ensure your Kube context points to the correct cluster !
 
 4. Review the kubezero-config and if all looks good commit the ArgoApp resouce for Kubezero via regular git  
   git add / commit / push `<cluster/env/kubezero/application.yaml>`  
-  *DO NOT yet re-enable ArgoCD before all pre v1.24 workers have been replaced !!!*
 
 5. Reboot controller(s) one by one  
 Wait each time for controller to join and all pods running.
