Latest kubezero-ci incl. Gitea theming

--- a/docs/v1.27.md
+++ b/docs/v1.27.md
@@ -7,6 +7,7 @@
 - updated and improved hardening of Istio Ingress Gateways
 - moved ECK operator into new kubezero-operators module
 - new, optional, OpenSearch operator
+- all instances now enforce IMDSv2
 
 ## Version upgrades
 - cilium 1.14.4
