Logging version bump, metrics fixes

--- a/docs/v1.27.md
+++ b/docs/v1.27.md
@@ -9,9 +9,15 @@
 - new, optional, OpenSearch operator
 - all instances now enforce IMDSv2
 
+## Fixes
+- `kubectl top nodes` works now using node-exporter metrics rather than cadvisor
+
 ## Version upgrades
 - cilium 1.14.4
 - istio 1.19.4
+- fluent-bit 2.2.0
+- ArgoCD 2.9
+- Prometheus / Grafana
 
 ### FeatureGates
 - CustomCPUCFSQuotaPeriod
