Various minor fixes

--- a/docs/v1.27.md
+++ b/docs/v1.27.md
@@ -5,6 +5,7 @@
 ## What's new - Major themes
 - all KubeZero and support AMIs based on latest Alpine 3.18.4
 - updated and improved hardening of Istio Ingress Gateways
+- IPv6 support for Ingress
 - moved ECK operator into new kubezero-operators module
 - new, optional, OpenSearch operator
 - all instances now enforce IMDSv2
