More minor fixes and doc updates

--- a/docs/v1.27.md
+++ b/docs/v1.27.md
@@ -22,7 +22,7 @@
 
 ### FeatureGates
 - CustomCPUCFSQuotaPeriod
-- MemoryQoS
+- MemoryQoS [details](https://kubernetes.io/blog/2023/05/05/qos-memory-resources/)
 
 # Upgrade
 `(No, really, you MUST read this before you upgrade)`
