--- a/docs/v1.27.md
+++ b/docs/v1.27.md
@@ -1,7 +1,5 @@
 # KubeZero 1.27
 
-## TODO
-
 ## What's new - Major themes
 - all KubeZero and support AMIs based on latest Alpine 3.18.4
 - updated and improved hardening of Istio Ingress Gateways
@@ -22,7 +20,7 @@
 
 ### FeatureGates
 - CustomCPUCFSQuotaPeriod
-- MemoryQoS [details](https://kubernetes.io/blog/2023/05/05/qos-memory-resources/)
+- [MemoryQoS](https://kubernetes.io/blog/2023/05/05/qos-memory-resources/)
 
 # Upgrade
 `(No, really, you MUST read this before you upgrade)`
@@ -51,7 +49,7 @@ Might take a while ...
 
 7. Re-enable ArgoCD by hitting <return> on the still waiting upgrade script 
 
-8. Quickly head over to ArgoCD and sync the KubeZero main module as soon as possible to reduce potential back and forth in case ArgoCD has legacy state
+8. Head to the ArgoCD UI and sync all KubeZero apps to verify all are synced successfully.
 
 
 ## Known issues
