feat: v1.28 version upgrade argoCD incl. move into argo umbrella chart

--- a/docs/v1.28.md
+++ b/docs/v1.28.md
@@ -4,6 +4,7 @@
 - all KubeZero and support AMIs based on Alpine 3.19.1
 - further reduced boot time, eg. less than 30s for a bastion on EC2
 - sub-second timestamps for all system logs
+- enabled TransparentHugePages incl. save settings for Golang
 
 
 ## Fixes
