docs: some more details for v1.28

--- a/docs/v1.28.md
+++ b/docs/v1.28.md
@@ -6,18 +6,15 @@
 - sub-second timestamps for all system logs
 - enabled TransparentHugePages incl. save settings for Golang
 
-
-## Fixes
-- `kubectl top nodes` works now using node-exporter metrics rather than cadvisor
-
 ## Version upgrades
-- cilium 1.14.4
-- istio 1.19.4
-- fluent-bit 2.2.0
-- ArgoCD 2.9
-- Prometheus / Grafana
+- cilium 1.15.3
+- istio 1.21.1
+- fluent-bit 3.0.1
+- ArgoCD 2.10.6
+- Prometheus 2.51.1 / Grafana 10.4
 
 ### FeatureGates
 - CustomCPUCFSQuotaPeriod
+- SidecarContainers
 
 ## Known issues
