Add release logo to release notes

--- a/docs/v1.28.md
+++ b/docs/v1.28.md
@@ -1,4 +1,5 @@
 # KubeZero 1.28
+![aws_architecture](docs/images/logo-v1.28.png)
 
 ## What's new - Major themes
 - all KubeZero and support AMIs based on Alpine 3.19.1
