docs: v129 changelog updates

--- a/docs/v1.29.md
+++ b/docs/v1.29.md
@@ -1,17 +1,18 @@
-# KubeZero 1.29
-![aws_architecture](docs/images/logo-v1.29.png)
+# ![k8s-v1.29](images/k8s-v129.png)  KubeZero 1.29
 
 ## What's new - Major themes
 - all KubeZero and support AMIs based on Alpine 3.20.1
-- new Telemetry module integrated consisting of OpenTelemetry Collector, Jaeger UI, OpenSearch + Dashboards backend
-- custom KubeZero ArgoCD edition providing adding support for referring to external secrets using the helm-secrets plugin + vals
-- Falco IDS now using eBPF ( still in preview )
+- new (optional) Telemetry module integrated consisting of OpenTelemetry Collector, Jaeger UI, OpenSearch + Dashboards backend
+- custom KubeZero ArgoCD edition adding support for referring to external secrets via helm-secrets + vals
+- updated Nvidia and AWS Neuron drivers to latest versions for AI/ML workloads
+- Falco IDS now using the modern eBPF event source ( preview )
 
 ## Version upgrades
 - cilium 1.15.7
 - istio 1.22.3
 - ArgoCD 2.11.5
-- Prometheus 2.53 / Grafana 11.1
+- Prometheus 2.53 / Grafana 11.1 ( fixing many of the previous warnings )
+- ...
 
 ### FeatureGates
 - CustomCPUCFSQuotaPeriod
