chore: update docs

--- a/docs/v1.30.md
+++ b/docs/v1.30.md
@@ -3,13 +3,14 @@
 ## What's new - Major themes
 - all KubeZero and support AMIs based on Alpine 3.20.3
 - reduced memory consumption of CNI agent on each node
+- all tools (CloudBender, AWS Lambda functions,... ) upgraded to Python 3.12
 
 
 ## Version upgrades
-- cilium 1.16.2
+- cilium 1.16.3
 - istio 1.22.3
-- ArgoCD 2.11.5
-- Prometheus 2.53 / Grafana 11.1 ( fixing many of the previous warnings )
+- ArgoCD 2.12.4
+- Prometheus 2.54.1 / Grafana 11.2.2
 - ...
 
 ## Resources
