fix: update various Grafana dashboards

--- a/docs/v1.30.md
+++ b/docs/v1.30.md
@@ -9,7 +9,7 @@
 ## Version upgrades
 - cilium 1.16.3
 - istio 1.22.3
-- ArgoCD 2.12.4
+- ArgoCD 2.12.4 [custom ZDT image](https://git.zero-downtime.net/ZeroDownTime/zdt-argocd)
 - Prometheus 2.54.1 / Grafana 11.2.2
 - ...
 
